[gd_scene load_steps=11 format=3 uid="uid://de562r4b80bpy"]

[ext_resource type="Script" uid="uid://b52iq7vmrnfuq" path="res://FPS/pistol.gd" id="1_qy5pi"]

[sub_resource type="BoxMesh" id="BoxMesh_qrlfl"]
size = Vector3(0.1, 0.1, 0.4)

[sub_resource type="BoxMesh" id="BoxMesh_cxw0b"]
size = Vector3(0.01, 0.055, 0.03)

[sub_resource type="BoxMesh" id="BoxMesh_qy5pi"]
size = Vector3(0.1, 0.2, 0.1)

[sub_resource type="Gradient" id="Gradient_qy5pi"]
offsets = PackedFloat32Array(0.036666665, 0.06333333, 0.086666666)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cxw0b"]
gradient = SubResource("Gradient_qy5pi")
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_qy5pi"]
resource_name = "fire"
length = 0.1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.08546629, 0), Vector3(0, -0.040228046, 0.038171057), Vector3(0, -0.08546629, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.20109688, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/Barrel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.025), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cxw0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.08546629, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/Barrel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ai4cy"]
resource_name = "reload"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.08546629, 0), Vector3(0.115, 0.074, 0.09), Vector3(0.115, 0.074, 0.09), Vector3(0, -0.08546629, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.32936108, 0, -0.19223055), Vector3(0.32936108, 0, -0.19223055), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxw0b"]
_data = {
&"RESET": SubResource("Animation_cxw0b"),
&"fire": SubResource("Animation_qy5pi"),
&"reload": SubResource("Animation_ai4cy")
}

[node name="Pistol" type="Node3D"]
script = ExtResource("1_qy5pi")
reload_time = 1.0
shot_time = 0.1
scope_fov = 50.0

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.99999964, 0, 0, 0, 0.99999964, 0, -0.08546629, 0)

[node name="Barrel" type="MeshInstance3D" parent="Visual"]
mesh = SubResource("BoxMesh_qrlfl")
skeleton = NodePath("../..")

[node name="ScopeThing" type="MeshInstance3D" parent="Visual/Barrel"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0.051325947, -0.16392769)
mesh = SubResource("BoxMesh_cxw0b")
skeleton = NodePath("../..")

[node name="Grip" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0.1)
mesh = SubResource("BoxMesh_qy5pi")
skeleton = NodePath("../..")

[node name="ParticleSpot" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)

[node name="Reticle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Reticle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Reticle/CenterContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_cxw0b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cxw0b")
}

[connection signal="fired" from="." to="." method="_on_fired"]
[connection signal="reload_started" from="." to="." method="_on_reload_started"]
[connection signal="scoped_changed" from="." to="." method="_on_scoped_changed"]
